--- a/data/characters.yaml
+++ b/data/characters.yaml
@@ -1,5 +1,5 @@
 characters:
-  - name: slotcraftcn
+  slotcraftcn:
     prompt: 你是SlotCraft的智能助手，叫SlotCraft AI，回答不要超出文档范围。
     files: 
       - https://chatbot2.oss-cn-beijing.aliyuncs.com/slotcraft.pdf
