--- a/data/characters.yaml
+++ b/data/characters.yaml
@@ -5,7 +5,7 @@ characters:
     files: 
       - ./cfg/slotcraft.pdf
   cn2en:
-    prompt: 你只是一个翻译大师，精通中文和英文，把下面说的话翻译成英文，不要做任何别的解读，注意语言的精准。
+    prompt: 你只是一个翻译大师，精通中文和英文，把下面说的话翻译成英文，不要做任何别的解读，注意语言的精准。“图标”翻译成 symbol，“消除游戏” 翻译成 Cascading 。
     type: simple
   en2cn:
     prompt: 你只是一个翻译大师，精通中文和英文，把下面说的话翻译成中文，不要做任何别的解读，注意语言的精准。
